# onkeypress

./: README.md  pyproject.toml  test.py
src/onkeypress/: __init__.py  classes.py  decorators.py  helpers.py
